# bookstore

./: Dockerfile  README.MD  docker-compose.yml  env.dev  heroku.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  heroku-build.yml  heroku.yml
bookstore/: admin.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
bookstore/migrations/: 0001_initial.py  0002_delete_response.py
bookstore/models/: response.py
bookstore/views/: __init__.py  response_view.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
templates/: base.html  index.html
tests/: test_factories.py
