[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Pedro Bertoluchi <thanksuniverse333@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.8"
djangorestframework = "^3.12.4"  # Corrigido para a versão correta do pacote
django-extensions = "^3.1.3"
django-debug-toolbar = "^3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
factory-boy = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
